@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: abstractmodel.h,v 1.15 2003/09/16 12:17:50 garbeam Exp $
+ * $Id: abstractmodel.h,v 1.16 2003/09/16 16:03:31 squig Exp $
  *
  *****************************************************************************/
 
@@ -112,7 +112,7 @@ signals:
     /**
      * Emitted when updatePerformed() was called.
      */
-    void updated();
+    virtual void updated();
 
 };
 
